# qtgui

./: CMakeLists.txt  README.md  mainpage.dox  package.xml
include/qtgui/: main_window.hpp  qnode.hpp
launch/: qtgui.launch
scripts/: aes.py  dispatcher.py  jokes.txt  routine1.py  testserv.py  testservice.py  utterances.txt
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
