<?xml version="1.0"?>
<package>
  <name>qtgui</name>
  <version>0.1.0</version>
  <description>

     qtgui

  </description>
  <maintainer email="jim.finnis@gmail.com">Jim Finnis</maintainer>
  <author>Jim Finnis</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mary_tts</run_depend>
  <build_depend>mary_tts</build_depend>
 
</package>
